added guest log in path

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         </div>
       </header>
 
-      <!-- --- MAIN --- -->
+      <!-- --- LOG IN --- -->
       <main id="loginCard" class="login_page_main">
         <section class="login_card">
           <div class="login_card_head">
@@ -72,8 +72,8 @@
 
           <!-- ----- Login Button ----- -->
           <div class="login_card_foot">
-            <span class="foot_login_btn">Log in</span>
-            <span class="foot_guestlog_btn">Guest Log in</span>
+            <a href="#" class="foot_login_btn">Log in</a>
+            <a href="./summary.html" class="foot_guestlog_btn">Guest Log in</a>
           </div>
         </section>
       </main>
