added anchor to various sides

--- a/login.html
+++ b/login.html
@@ -20,7 +20,9 @@
         <img src="./assets/img/logIn/logo_desktop.png" alt="Join Logo" />
         <div id="signUpContainer" class="sign_up_container">
           <p>Not a Join user?</p>
-          <span class="sign_up_container_btn" onclick="toggleLogin()">Sign up</span>
+          <span class="sign_up_container_btn" onclick="toggleLogin()"
+            >Sign up</span
+          >
         </div>
       </header>
 
@@ -84,7 +86,9 @@
           <!-- -- signupHead--- -->
           <div class="signup_card_head">
             <img
-              id="backArrow" class="back_arrow" onclick="toggleSignupBack()"
+              id="backArrow"
+              class="back_arrow"
+              onclick="toggleSignupBack()"
               src="./assets/img/signUp/arrow_left.png"
               alt="Pfeil zurück"
             />
@@ -173,10 +177,8 @@
 
       <!-- --- FOOTER --- -->
       <footer class="login_page_bottom">
-        <a href="#">Privacy Policy</a>
-        <!-- Link fehlt noch -->
-        <a href="#">Legal notice</a>
-        <!-- Link fehlt noch -->
+        <a href="./privacy_policy.html">Privacy Policy</a>
+        <a href="./legal_notice.html">Legal notice</a>
       </footer>
     </section>
   </body>
