--- a/add_task.html
+++ b/add_task.html
@@ -39,9 +39,11 @@
                                 </label>
                                 <label for="select_contact">
                                     <h2>Assigned to</h2>
-                                    <select name="" id="select_contact" placeholder="test" class="select">
-                                        <option value="" disabled selected>Select contacts to assign</option>
-                                    </select>
+                                    <div id="assigned_container">
+                                        <select name="" id="select_contact" placeholder="test" class="select">
+                                            <option value="" disabled selected>Select contacts to assign</option>
+                                        </select>
+                                    </div>
                                 </label>
                             </div>
                             <div class="break_line"></div>
