--- a/summary.html
+++ b/summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary</title>
+    <title>Join</title>
     <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/summary.css">
     <link rel="stylesheet" href="./assets/fonts/fonts.css">
