--- a/add_task.html
+++ b/add_task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Task</title>
+    <title>Join</title>
     <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
     <link rel="stylesheet" href="./style.css">
