first prototype from assigned function

--- a/add_task.html
+++ b/add_task.html
@@ -40,7 +40,7 @@
                                 <label for="select_contact">
                                     <h2>Assigned to</h2>
                                     <div id="assigned_container">
-                                        <select name="" id="select_contact" placeholder="test" class="select">
+                                        <select name="" id="select_contact" placeholder="test" class="select" onclick="renderInputAssigned()">
                                             <option value="" disabled selected>Select contacts to assign</option>
                                         </select>
                                     </div>
