--- a/contacts.html
+++ b/contacts.html
@@ -37,30 +37,84 @@
           </div>
 
           <div class="contact_scrolls_stroke">
-            <img src="./assets/img/contacts/strokeGray.png" alt="">
+            <img src="./assets/img/contacts/strokeGray.png" alt="" />
           </div>
           <div class="contact_scrolls_card_small_onclick">
-            <img class="contact_scrolls_card_small_img" src="./assets/img/contacts/ProfilebadgeAM.png" alt="">
+            <img
+              class="contact_scrolls_card_small_img"
+              src="./assets/img/contacts/ProfilebadgeAM.png"
+              alt=""
+            />
             <div class="contact_scrolls_card_small_contact">
-              <span class="contact_scrolls_card_small_onclick_name">Anton Mayer</span>
-              <span class="contact_scrolls_card_small_onclick_email">antom@gemail.com</span>
+              <span class="contact_scrolls_card_small_onclick_name"
+                >Anton Mayer</span
+              >
+              <span class="contact_scrolls_card_small_onclick_email"
+                >antom@gemail.com</span
+              >
             </div>
           </div>
           <div class="contact_scrolls_card_small">
-            <img class="contact_scrolls_card_small_img" src="./assets/img/contacts/ProfilebadgeAM.png" alt="">
+            <img
+              class="contact_scrolls_card_small_img"
+              src="./assets/img/contacts/ProfilebadgeAM.png"
+              alt=""
+            />
             <div class="contact_scrolls_card_small_contact">
-              <span class="contact_scrolls_card_small_onclick_name">Anton Mayer</span>
-              <span class="contact_scrolls_card_small_onclick_email">antom@gemail.com</span>
+              <span class="contact_scrolls_card_small_name">Anton Mayer</span>
+              <span class="contact_scrolls_card_small_onclick_email"
+                >antom@gemail.com</span
+              >
             </div>
           </div>
         </div>
       </section>
 
-      <section class="contacts_headline">
-        <h1 class="contacts_headline_h1">Contacts</h1>
-        <img src="./assets/img/contacts/strokeBlue.png" alt="">
-        <span class="contacts_headline_text">Better with a team</span>
-      </section>
+      <div class="contacts_right_side_flex">
+        <section class="contacts_headline">
+          <h1 class="contacts_headline_h1">Contacts</h1>
+          <img src="./assets/img/contacts/strokeBlue.png" alt="" />
+          <span class="contacts_headline_text">Better with a team</span>
+        </section>
+
+        <section class="contacts_bigcard_container">
+          <div class="contacts_bigcard_contact_area">
+            <img
+              class="contacts_bigcard_img"
+              src="./assets/img/contacts/ProfilebadgeAM.png"
+              alt=""
+            />
+            <div class="contacts_bigcard_name_area">
+              <span class="contacts_bigcard_name">Anton Mayer</span>
+              <div class="contacts_bigcard_edit">
+                <div class="edit_area">
+                  <img
+                    class="edit_area_img"
+                    src="./assets/img/contacts/edit.png"
+                    alt=""
+                  />
+                  <span class="edit_text">Edit</span>
+                </div>
+                <div class="edit_area">
+                  <img
+                    class="edit_area_img"
+                    src="./assets/img/contacts/delete.png"
+                    alt=""
+                  />
+                  <span class="edit_text">Delete</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <span class="contacts_bigcard_Information_text">Contact Information</span>
+          <div class="contacts_bigcard_Information_email_phone">
+            <span class="contacts_bigcard_Information_email_phone_span">Email</span>
+            <span class="contacts_bigcard_Information_email">anton@gmail.com</span>
+            <span class="contacts_bigcard_Information_email_phone_span">Phone</span>
+            <span class="contacts_bigcard_Information_phone">+49 1111 111 11 1</span>
+          </div>
+        </section>
+      </div>
     </div>
   </body>
 </html>
