add add contact card

--- a/contacts.html
+++ b/contacts.html
@@ -106,12 +106,51 @@
               </div>
             </div>
           </div>
-          <span class="contacts_bigcard_Information_text">Contact Information</span>
+          <span class="contacts_bigcard_Information_text"
+            >Contact Information</span
+          >
           <div class="contacts_bigcard_Information_email_phone">
-            <span class="contacts_bigcard_Information_email_phone_span">Email</span>
-            <span class="contacts_bigcard_Information_email">anton@gmail.com</span>
-            <span class="contacts_bigcard_Information_email_phone_span">Phone</span>
-            <span class="contacts_bigcard_Information_phone">+49 1111 111 11 1</span>
+            <span class="contacts_bigcard_Information_email_phone_span"
+              >Email</span
+            >
+            <span class="contacts_bigcard_Information_email"
+              >anton@gmail.com</span
+            >
+            <span class="contacts_bigcard_Information_email_phone_span"
+              >Phone</span
+            >
+            <span class="contacts_bigcard_Information_phone"
+              >+49 1111 111 11 1</span
+            >
+          </div>
+        </section>
+
+        <section class="contact_overlay_add_contact_card">
+          <div class="contact_overlay_add_contact_card_left">
+            <img class="contact_overlay_add_contact_card_left_logo" src="./assets/img/contacts/joinLogo.png" alt="">
+            <div class="contact_overlay_add_contact_card_left_text_area">
+              <span class="contact_overlay_add_contact_card_left_text_area_heandline">Add contact</span>
+              <span class="contact_overlay_add_contact_card_left_text">Tasks are better with a team</span>
+              <img class="contact_overlay_add_contact_card_left_stroke" src="./assets/img/contacts/strokeBlueAddOverlay.png" alt="">
+            </div>
+          </div>
+          <div class="contact_overlay_add_contact_card_right">
+            <div class="contact_overlay_add_contact_card_right_close_div">
+              <img src="./assets/img/contacts/close.png" alt="">
+            </div>
+            <div class="contact_overlay_add_contact_card_right_center">
+              <img src="./assets/img/contacts/personEllipse.png" alt="">
+              <div class="contact_overlay_add_contact_card_right_input_area">
+                <input class="contact_overlay_add_contact_card_right_inputfield person_img" type="text" placeholder="    Name">
+                <input class="contact_overlay_add_contact_card_right_inputfield mail_img" type="email" placeholder="    Email">
+                <input class="contact_overlay_add_contact_card_right_inputfield phone_img" type="number" placeholder="    Phone">
+                <div class="contact_overlay_add_contact_card_right_btn_area">
+                  <button class="contact_overlay_add_contact_card_right_btn_cancel">Cancel <img class="contact_overlay_add_contact_card_right_btn" src="./assets/img/contacts/cancel.png" alt=""></button>
+                  <button class="contact_overlay_add_contact_card_right_btn_create">Create contact <img src="./assets/img/contacts/check.png" alt=""></button>
+                </div>
+              </div>
+            </div>
+            
           </div>
         </section>
       </div>
