--- a/login.html
+++ b/login.html
@@ -83,7 +83,6 @@
       <!-- --- SIGN UP --- -->
       <main id="signupCard" class="signup_page_main">
         <section class="signup_card">
-          
           <!-- -- signupHead--- -->
           <div class="signup_card_head">
             <img
@@ -175,6 +174,16 @@
           </div>
         </section>
       </main>
+
+      <!--  --- Hidden Sign up --- -->
+      <div class="sign_up_mobile" >
+        <div id="signUpContainer" class="sign_up_container_mobile">
+          <p>Not a Join user?</p>
+          <span class="sign_up_container_btn_mobile" onclick="toggleLogin()"
+            >Sign up</span
+          >
+        </div>
+      </div>
 
       <!-- --- FOOTER --- -->
       <footer class="login_page_bottom">
