add closeDropdown function

--- a/add_task.html
+++ b/add_task.html
@@ -22,7 +22,7 @@
         <section class="header">
             <!-- <nav class="header"></nav> -->
             <div w3-include-html="./assets/templates/header/header.html"></div>
-            <section class="add_task_content">
+            <section class="add_task_content" onclick="closeDropdown()">
 
                 <form onsubmit="checkForm(event)">
                     <div class="main_content">
