--- a/board.html
+++ b/board.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Join</title>
 
-    <link
-      rel="shortcut icon"
-      href="./assets/img/favicon_light.png"
-      type="image/x-icon"
-    />
-    <script src="./script.js"></script>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./assets/templates/header/header.css">
-    <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
-  </head>
-  <body onload="init()">
-    <div w3-include-html="./assets/templates/header/header.html"></div>
-    <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Join</title>
+
+  <link rel="shortcut icon" href="./assets/img/favicon_light.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./assets/templates/header/header.css">
+  <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css">
+  <link rel="stylesheet" href="./assets/css/board.css">
+</head>
+
+<body onload="init()">
+  <div class="container">
+    <div class="side_bar_position_container">
+      <div w3-include-html="./assets/templates/sidebar/sidebar.html"></div>
+    </div>
+    <main>
+      <div w3-include-html="./assets/templates/header/header.html"></div>
+      <div class="board_content">
+        <section class="headline_section">
+          <h1>Board</h1>
+          <div class="headline_input_container">
+            <div class="headline_input">
+              <input type="text">
+              <div class="br"></div>
+              <img src="./assets/img/board/magnifiying_glass.png" alt="">
+            </div>
+            <button>Add task</button>
+          </div>
+        </section>
+      </div>
+    </main>
+  </div>
+
+  <script src="./script.js"></script>
+  <script src="./js/board.js"></script>
+</body>
+
 </html>
