--- a/add_task.html
+++ b/add_task.html
@@ -91,8 +91,8 @@
                                 <p><span class="required_char">*</span>This field is required</p>
                             </div>
                             <div class="form_button_container">
-                                <button class="form_button_clear" id="clear_button" onclick="clear()">Clear</button>
-                                <button class="form_button_create" type="submit">Create Task</button>
+                                <button class="form_button_clear" id="clear_button" onclick="clear()"><span>Clear</span> <img src="./assets/img/add_task/clear.png" alt="clear button"></button>
+                                <button class="form_button_create" type="submit"><span>Create Task</span> <img src="./assets/img/add_task/check.png" alt="create task button"></button>
                             </div>
                         </section>
                         <div class="mobile_sidebar_container"></div>
