--- a/contacts.html
+++ b/contacts.html
@@ -113,7 +113,7 @@
           </div>
         </section>
 
-        <section class="contact_overlay_add_contact_card">
+        <!-- <section class="contact_overlay_add_contact_card">
           <div class="contact_overlay_add_contact_card_left">
             <img
               class="contact_overlay_add_contact_card_left_logo"
@@ -182,7 +182,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </div>
     </div>
   </body>
