add first html structure in board.html

--- a/board.html
+++ b/board.html
@@ -25,11 +25,67 @@
           <h1>Board</h1>
           <div class="headline_input_container">
             <div class="headline_input">
-              <input type="text">
+              <input type="text" placeholder="Find Task">
               <div class="br"></div>
-              <img src="./assets/img/board/magnifiying_glass.png" alt="">
+              <img src="./assets/img/board/magnifiying_glass.png" alt="search task input">
             </div>
-            <button>Add task</button>
+            <button class="add_task_button">Add task <img src="./assets/img/board/add.png"></button>
+          </div>
+        </section>
+        <section class="category_section">
+          <div class="category">
+            <div class="category_headline">
+              <b>To do</b> <img src="./assets/img/board/plus.png" alt="create Task">
+            </div>
+            <div>
+              
+            </div>
+          </div>
+          <div class="category">
+            <div class="category_headline">
+              <b>In progress</b><img src="./assets/img/board/plus.png" alt="create Task">
+            </div>
+            <div>
+              <div class="card">
+                <section class="card_headline">
+                  <span>User Story</span>
+                </section>
+                <section>
+                  <h2>Kochwelt Page & Recipe Recommender</h2>
+                </section>
+                <section class="card_description">
+                  Build start page width recipe recommendation...
+                </section>
+                <section class="card_subtasks">
+                  <progress id="subtask_progress" value="1" max="2"></progress>
+                  <label for="subtask_progress">1/2 Subtasks</label>
+                </section>
+                <section>
+                  <div>
+
+                  </div>
+                  <div>
+                    <img src="./assets/img/add_task/medium_color.png">
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
+          <div class="category">
+            <div class="category_headline">
+              <b>Await feedback</b> <img src="./assets/img/board/plus.png" alt="create Task">
+            </div>
+            <div>
+
+            </div>
+          </div>
+          <div class="category">
+            <div class="category_headline">
+              <b>Done</b> <img src="./assets/img/board/plus.png" alt="create Task">
+            </div>
+            <div>
+
+            </div>
           </div>
         </section>
       </div>
