--- a/add_task.html
+++ b/add_task.html
@@ -105,5 +105,6 @@
     
     <script src="./script.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/header.js"></script>
 </body>
 </html
