--- a/board.html
+++ b/board.html
@@ -40,6 +40,7 @@
 
   <script src="./script.js"></script>
   <script src="./js/board.js"></script>
+  <script src="./js/header.js"></script>
 </body>
 
 </html>
