--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,7 @@
       type="image/x-icon"
     />
     <script src="./script.js"></script>
+    <script src="./js/header.js"></script>
     <link rel="stylesheet" href="assets/css/contacts.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
