--- a/summary.html
+++ b/summary.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/templates/header/header.css" />
     <link rel="stylesheet" href="./assets/templates/sidebar/sidebar.css" />
     <script src="script.js"></script>
+    <script src="./js/header.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="init()">
