added starting animation

--- a/sign_up.html
+++ b/sign_up.html
@@ -27,10 +27,10 @@
         <form onsubmit="inputValue(); return false" class="signup_card">
           <!-- -- signupHead--- -->
           <div class="signup_card_head">
-            <a href="./login.html">
+            <a class="back_arrow" href="./login.html">
               <img
                 id="backArrow"
-                class="back_arrow"
+                
                 src="./assets/img/signUp/arrow_left.png"
                 alt="Pfeil zurück"
               />
