--- a/login.html
+++ b/login.html
@@ -11,14 +11,26 @@
     />
     <link rel="stylesheet" href="./assets/css/login.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/css/landing_page.css" />
     <script src="./script.js"></script>
     <script src="./js/login.js"></script>
   </head>
   <body>
+    <section id="landing_page" class="landing_page modal">
+      <div class="landing_page_desktop">
+        <img src="./assets/img/logoStartseite.png" alt="Logo Desktop" />
+      </div>
+      <div class="landing_page_mobile">
+        <img src="./assets/img/landing_page/logo_hell.png" alt="Logo Mobile" />
+      </div>
+    </section>
+
     <!-- --- HEAD --- -->
     <section class="login_page_container">
       <header class="login_page_head">
-        <img src="./assets/img/logIn/logo_desktop.png" alt="Join Logo" />
+        <div class="login_logo">
+          <img src="./assets/img/logIn/logo_desktop.png" alt="Join Logo" />
+        </div>
         <div id="signUpContainer" class="sign_up_container">
           <p>Not a Join user?</p>
           <a href="./sign_up.html"
